--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run unit tests
       run: |
-        docker build --tag ${GITHUB_REPOSITORY} .
-        docker run ${GITHUB_REPOSITORY}
+        docker build .
+        docker run
     - name: Build release modes
       run: echo "We should implement this"
