--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run unit tests
       run: |
-        docker build .
-        docker run
+        docker build --tag steampress .
+        docker run steampress
     - name: Build release modes
       run: echo "We should implement this"
