Install vapor toolbox to fix OpenSSL linking

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Run unit tests
       run: |
         if [[ "$OSTYPE" == "darwin"* ]]; then
+            brew install vapor/tap/vapor
             swift test
         else
           docker build --tag unit-tests -f unitTests.dockerfile .
